# face-verification-for-acess-control

./: LICENSE.md  README.md  logsverification_values.txt
documentation/html/: graph_legend.html  index.html  md_README.html  pages.html
documentation/latex/: md_README.tex  refman.tex
logs/: logins.txt  registartion_values.txt
models/: Readme.txt
src/: documentation.sh  sample_text.conf  sample_text.conf~  start_reg_ARDUINO.sh  start_registration.sh  start_verification.sh
src/cpp/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main_webcam.cpp  webcam_acquisition
src/cpp/Socket/: socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp
src/html/: annotated.html  classCalibration-members.html  classCalibration.html  classCamera-members.html  classCamera.html  classDetectionFactory_1_1DetectionAlgorithm-members.html  classDetectionFactory_1_1DetectionAlgorithm.html  classDetectionFactory_1_1MTCNN-members.html  classDetectionFactory_1_1MTCNN.html  classDetectionFactory_1_1dLib-members.html  classDetectionFactory_1_1dLib.html  classRecognitionFactory_1_1DeepFace-members.html  classRecognitionFactory_1_1DeepFace.html  classRecognitionFactory_1_1OpenFace-members.html  classRecognitionFactory_1_1OpenFace.html  classRecognitionFactory_1_1RecognitionAlgorithm-members.html  classRecognitionFactory_1_1RecognitionAlgorithm.html  classRecognitionFactory_1_1dLib-members.html  classRecognitionFactory_1_1dLib.html  classdetect__face_1_1Network-members.html  classdetect__face_1_1Network.html  classdetect__face_1_1ONet.html  (+32 more)
(+121 files in other folders)
